--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-window": "^1.8.10"
+    "react-window": "^1.8.10",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -26,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.8"
   }
